@@ -1,5 +1,10 @@
 2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* m4/groff.m4 (GROFF_PNMTOOLS_CAN_BE_QUIET,
+	GROFF_PNMTOPS_NOSETPAGE): Skip check if prerequisite not met.
+
+2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* m4/groff.m4 (GROFF_URW_FONTS_CHECK): Rename this...
 	(GROFF_URW_FONTS_NOTICE): ...to this.
 	(GROFF_URW_FONTS): ...and this...
